; ModuleID = '/home/carl/AnghaBench/seafile/daemon/extr_cevent.c_cevent_manager_add_event.c'
source_filename = "/home/carl/AnghaBench/seafile/daemon/extr_cevent.c_cevent_manager_add_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32* }
%struct.CEvent = type { i8*, i32 }

@CEVENT_SIZE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [17 x i8] c"add event error\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cevent_manager_add_event(%struct.TYPE_3__* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.CEvent, align 8
  %8 = alloca i8*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = call i32 @pthread_mutex_lock(i32* %10)
  %12 = bitcast %struct.CEvent* %7 to i8*
  store i8* %12, i8** %8, align 8
  %13 = load i32, i32* %5, align 4
  %14 = getelementptr inbounds %struct.CEvent, %struct.CEvent* %7, i32 0, i32 1
  store i32 %13, i32* %14, align 8
  %15 = load i8*, i8** %6, align 8
  %16 = getelementptr inbounds %struct.CEvent, %struct.CEvent* %7, i32 0, i32 0
  store i8* %15, i8** %16, align 8
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 1
  %19 = load i32*, i32** %18, align 8
  %20 = getelementptr inbounds i32, i32* %19, i64 1
  %21 = load i32, i32* %20, align 4
  %22 = load i8*, i8** %8, align 8
  %23 = load i64, i64* @CEVENT_SIZE, align 8
  %24 = call i64 @seaf_pipe_writen(i32 %21, i8* %22, i64 %23)
  %25 = load i64, i64* @CEVENT_SIZE, align 8
  %26 = icmp ne i64 %24, %25
  br i1 %26, label %27, label %29

27:                                               ; preds = %3
  %28 = call i32 @g_warning(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  br label %29

29:                                               ; preds = %27, %3
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %30, i32 0, i32 0
  %32 = call i32 @pthread_mutex_unlock(i32* %31)
  ret void
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i64 @seaf_pipe_writen(i32, i8*, i64) #1

declare dso_local i32 @g_warning(i8*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
